# bibref-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bibref/: tools.py
