[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibref-python"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
version = "2026.3.18"
description = "Python wrapper for the bibref command-line tool for working with biblical references"
authors = [
    { name="Zoltán Kovács" }
]
dependencies = [
    "pexpect>=4.8"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved",
]

[project.urls]
Homepage = "https://github.com/kovzol/bibref-python"

[tool.setuptools.packages.find]
where = ["src"]
